# WR-route

./: .env.example  .gitignore  CHAIN_LOCATIONS_UPDATE.md  QUICK_START.md  README.md  SPRINT_1_COMPLETE.md  SPRINT_2_COMPLETE.md  SPRINT_3_COMPLETE.md  SPRINT_4_COMPLETE.md  SPRINT_5_COMPLETE.md  SPRINT_6_COMPLETE.md  SPRINT_7_COMPLETE.md  SPRINT_8_COMPLETE.md  SPRINT_9_COMPLETE.md  TESTING.md  excluded_restaurants.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_real_route.py  test_pipeline.py
docs/: 00-project-summary.md  01-prd.md  02-architectural-design.md  03-development-phases.md  04-style-guide.md  05-sprint-breakdown.md  06-claude.md  07-user-stories.md  08-product-backlog.md  09-chain-locations-policy.md
src/fast_food_optimizer/: __init__.py
src/fast_food_optimizer/config/: __init__.py  settings.py
src/fast_food_optimizer/models/: __init__.py  restaurant.py
src/fast_food_optimizer/optimization/: __init__.py  clusterer.py  distance.py  global_optimizer.py  route_optimizer.py  tsp_solver.py
src/fast_food_optimizer/utils/: __init__.py  exceptions.py  logging.py
src/fast_food_optimizer/validation/: __init__.py  duplicate_detector.py  quality_metrics.py  validator.py  verifier.py
src/fast_food_optimizer/visualization/: __init__.py  map_visualizer.py  route_exporter.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_classifier.py  test_clusterer.py  test_config.py  test_distance.py  test_duplicate_detector.py  test_enricher.py  test_exceptions.py  test_global_optimizer.py  test_logging.py  test_map_visualizer.py  test_persistence.py  test_quality_metrics.py  test_restaurant_model.py  test_route_exporter.py  test_route_optimizer.py  test_tsp_solver.py  test_validator.py  test_verifier.py
